# binexport

./: CMakeLists.txt  README.md  address_references.h  binexport.cc  binexport2.proto  binexport2_writer.cc  binexport2_writer.h  expression.cc  flow_graph.cc
.github/scripts/: decrypt_secret.sh
.github/workflows/: cmake.yml
binaryninja/: CMakeLists.txt  flow_analysis.cc  flow_analysis.h  main_plugin.cc
cmake/: BinExportDeps.cmake  BinExportOptions.cmake  CompileOptions.cmake  FindIdaSdk.cmake
ida/: CMakeLists.txt  begin_idasdk.inc  end_idasdk.inc  flow_analysis.cc  ida_api.cc  ida_api.h  main_plugin.cc  main_plugin.h  metapc.cc  names.cc  names.h
ida/idasdk/: README.md
java/: Dockerfile
java/src/main/java/com/google/security/binexport/: BinExport2Builder.java  BinExportExporter.java
kokoro/macos/: build.sh
kokoro/ubuntu/: dockerized_build.sh
kokoro/windows/: build.bat
reader/: call_graph.cc  flow_graph.cc
tools/: CMakeLists.txt  binexport2dump.cc  bxp_disasm.cc  bxp_dummy.cc  bxp_flow_graph.cc  bxp_main.cc  command_util.cc  command_util.h
util/: filesystem.cc  filesystem.h  filesystem_test.cc  idb_export.cc  process.cc  process.h  status_macros_test.cc
